--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "axios": "^1.4.0",
     "core-js": "^3.6.5",
     "glider-js": "^1.7.7",
+    "ramp-storylines": "^0.2.5",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
+    "vue-fullscreen": "^2.6.1",
     "vue-i18n": "^8.24.5",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.6.5",
+    "vue-tippy": "^4.10.0",
     "vue-toastification": "^1.7.14"
   },
   "devDependencies": {
@@ -48,7 +51,7 @@
     "prettier": "^2.2.1",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.2",
     "typescript": "~4.1.5",
     "vue-template-compiler": "^2.6.11"
   }
