--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -25,6 +25,7 @@ jobs:
               with:
                   branch: gh-pages
                   folder: dist
+                  target-folder: ${{ github.head_ref || github.ref_name }}
                   single-commit: true
 
             - uses: actions/github-script@v6
